--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  filter: opacity(50%);
+}
